src/objects/ISSP_Integration_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ISSP Integration Accounts</relationshipLabel>
        <relationshipName>ISSP_Integration_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_IATA_Code__c</fullName>
        <label>System IATA Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ISSP Integration Accounts</label>
    <nameField>
        <label>ISSP Integration Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISSP Integration Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>